<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Constants" Id="{3cd51791-fad7-404a-90f7-f0bee9d96ece}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Constants
VAR
	
	bInit:BOOL:=TRUE;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bInit THEN
	bInit:=FALSE;
	//Lighting Init
	House.stFloorOne.stLights.stLighting.aModes[0]:='Automatic';
	House.stFloorOne.stLights.stLighting.aModes[1]:='Manual';
	House.stFloorOne.stLights.stLighting.sMode:='Init';
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Constants">
      <LineId Id="9" Count="4" />
      <LineId Id="5" Count="0" />
      <LineId Id="14" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>